Force scrollbar to stop 'jumping'

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,7 @@
 .container .hljs {
     background-color: transparent;
 }
+
+body {
+    overflow-y: scroll;
+}
